<resources>
    <string name="app_name">Bubbles</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Forgot_Password">Don\'t remember password?</string>
    <string name="or">Or</string>
    <string name="facebook">facebook</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="gmail">gmail</string>
    <string name="twitter">twitter</string>
    <string name="todo">TODO</string>
    <string name="title_activity_another">AnotherActivity</string>
    <string name="title_activity_client_navigation_drawer">ClientNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle_client">Client Account</string>
    <string name="nav_header_subtitle_stylist">Stylieist Account</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_appointment">Appointments</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_client_home">ClientHomeActivity</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="update_profile">Edit Profile</string>
    <string name="dropped_pin">You are here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_stylist_home">StylistHomeActivity</string>

    <string name="service_prompt">Choose a service</string>

    <string-array name="service_category">
        <item> Select Service to offer</item>
        <item> Nail Services</item>
        <item> Hair Services</item>
        <item> Massage Services</item>
    </string-array>

    <string-array name="hair_services">
        <item> Cut</item>
        <item> Mohawk</item>
        <item> French Twist</item>
    </string-array>



</resources>
